# flashthing

./: .gitignore  Cargo.toml  Justfile  README.md  package.json  rustfmt.stable.toml  rustfmt.toml
.github/workflows/: build.yaml  ci.yaml  ci.yml  publish.yaml
bindings/: .npmignore  Cargo.toml  index.d.ts  index.js  package.json
bindings/examples/: index.ts
bindings/src/: conversion.rs  lib.rs  monitoring.rs
cli/: Cargo.toml
cli/src/: main.rs  monitoring.rs
docs/: meta-schema.json  meta.md
lib/: Cargo.toml
lib/resources/: stock-meta.json
lib/src/: aml.rs  config.rs  flash.rs  lib.rs  partitions.rs  setup.rs
scripts/: set-versions.sh
