[package]
name = "n-flashthing"
version = "0.2.2"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.44"
flashthing = { path = "../lib" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dependencies.napi]
version = "3.9"
default-features = false
# see https://nodejs.org/api/n-api.html#node-api-version-matrix
features = ["napi4", "async"]

[dependencies.napi-derive]
version = "3.5"
features = ["type-def"]

[build-dependencies]
napi-build = "2"
