[package]
name = "flashthing-cli"
version = "0.1.5"
edition = "2021"
description = "cli for flashthing"
repository = "https://github.com/JoeyEamigh/flashthing.git"
documentation = "https://github.com/JoeyEamigh/flashthing"
homepage = "https://github.com/JoeyEamigh/flashthing"
keywords = ["spotify", "car-thing", "flashthing"]
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
flashthing = { path = "../lib", version = "0.1" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
