[package]
name = "flashthing"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }

rusb = "0.9.4"
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.12.0"
zip = "2.2.2"
lazy_static = "1.5.0"

[features]
default = []
instrument = []
