[package]
name = "flashthing"
version = "0.1.5"
edition = "2021"
description = "tool for flashing your Spotify Car Thing"
repository = "https://github.com/JoeyEamigh/flashthing.git"
documentation = "https://github.com/JoeyEamigh/flashthing"
homepage = "https://github.com/JoeyEamigh/flashthing"
keywords = ["spotify", "car-thing", "flashthing"]
readme = "README.md"
license = "MIT"

[dependencies]
tracing = { workspace = true }

rusb = "0.9.4"
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.12.0"
zip = "2.2.2"
lazy_static = "1.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
whoami = "2.0.0-pre.1"

[features]
default = []
instrument = []
