[package]
name = "flashthing"
version = "0.1.7"
edition = "2024"
description = "tool for flashing your Spotify Car Thing"
repository = "https://github.com/JoeyEamigh/flashthing.git"
documentation = "https://github.com/JoeyEamigh/flashthing"
homepage = "https://github.com/JoeyEamigh/flashthing"
keywords = ["spotify", "car-thing", "flashthing"]
readme = "../README.md"
license = "MIT"

[dependencies]
tracing = { workspace = true }

rusb = "0.9.4"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = "3.20.0"
zip = "2.4.2"
lazy_static = "1.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
whoami = "2.1.2"

[features]
default = []
instrument = []
